# nettoolskit-cli

./: .clippy.toml  .editorconfig  .gitattributes  .gitignore  CHANGELOG-MODERN-TUI.md  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  LICENSE  README.md  SECURITY.md  deny.toml  rust-toolchain.toml  rustfmt.toml
benchmarks/: Cargo.toml
benchmarks/benches/: command_cache.rs  file_search.rs  manifest_parsing.rs  template_rendering.rs  ui_formatting.rs
benchmarks/src/: lib.rs
cli/: Cargo.toml
cli/examples/: input_debug.rs  modern_tui_demo.rs
cli/src/: async_executor.rs  command_palette.rs  commands.rs  events.rs  input.rs  lib.rs  main.rs  palette.rs  slash_command.rs
cli/src/commands/: apply.rs  check.rs  list.rs  mod.rs  new.rs  render.rs
cli/tests/: cli_commands_tests.rs  file_search_tests.rs  input_debug_test.rs  input_diagnostic.rs  input_tests.rs  lib_tests.rs  palette_tests.rs  regression.rs  slash_commands_tests.rs  ui_integration_test.rs
commands/: Cargo.toml
commands/src/: apply.rs  async_executor.rs  check.rs  error.rs  lib.rs  list.rs  mod.rs  new.rs  processor.rs  processor_async.rs  render.rs
commands/tests/: commands_tests.rs  integration_tests.rs  lib_tests.rs  processor_tests.rs
commands/tests/data/: ntk-manifest-domain.yml
core/: Cargo.toml
core/src/: features.rs  lib.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: display.rs  events.rs  input.rs  lib.rs  main.rs  state.rs
crates/cli/tests/: cli_commands_tests.rs  display_tests.rs  e2e_tests.rs  error_tests.rs  events_tests.rs  hierarchical_palette_tests.rs  input_debug_test.rs  input_diagnostic.rs  input_tests.rs  lib_tests.rs  lib_tests.rs.bak  palette_tests.rs  regression.rs  test_suite.rs  ui_integration_test.rs
crates/cli/tests/integration/: command_palette_diagnostic.rs  mod.rs  ui_integration_test.rs
crates/commands/: Cargo.toml  README.md  lib.rs
crates/commands/help/: Cargo.toml  README.md
crates/commands/help/src/: lib.rs
crates/commands/help/tests/: error_tests.rs  test_suite.rs
crates/commands/management/: Cargo.toml
crates/commands/management/src/: definitions.rs  io.rs  lib.rs  processor.rs  submenu.rs
crates/commands/management/tests/: apply_tests.rs  commands_tests.rs  executor_tests.rs  integration_tests.rs  io_tests.rs  list_tests.rs  processor_tests.rs  test_suite.rs
crates/commands/manifest/: Cargo.toml  README.md
crates/commands/manifest/src/: definitions.rs  error.rs  executor.rs  lib.rs  menu.rs  models.rs  parser.rs  rendering.rs
crates/commands/manifest/tests/: async_tests.rs  error_tests.rs  executor_tests.rs  files_tests.rs  integration_tests.rs  models_tests.rs  parser_tests.rs  tasks_tests.rs  test_suite.rs
crates/commands/src/: executor.rs  lib.rs  processor.rs  registry.rs  translate.rs
crates/commands/templating/: Cargo.toml  README.md
crates/commands/templating/src/: batch.rs  engine.rs  error.rs  factory.rs  helpers.rs  lib.rs  resolver.rs  strategy.rs
crates/commands/templating/tests/: batch_tests.rs  common.rs  engine_tests.rs  error_tests.rs  factory_tests.rs  resolver_tests.rs  strategy_tests.rs  test_suite.rs
crates/commands/tests/: error_tests.rs  executor_tests.rs  integration_tests.rs  lib_tests.rs  processor_tests.rs  registry_tests.rs  translate_tests.rs
crates/commands/translate/: Cargo.toml  README.md
crates/commands/translate/src/: lib.rs
crates/commands/translate/tests/: error_tests.rs  test_suite.rs  translate_tests.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: ai_context.rs  config.rs  exit_status.rs  features.rs  lib.rs  runtime.rs
crates/core/src/async-utils/: cancellation.rs  lib.rs  timeout.rs
crates/core/src/file-search/: filters.rs  lib.rs  search.rs
crates/core/src/menu/: command_entry.rs  menu_entry.rs  menu_provider.rs  mod.rs
crates/core/src/path-utils/: directory.rs  lib.rs
crates/core/src/string-utils/: string.rs
crates/core/tests/: commands_tests.rs  config_tests.rs  error_tests.rs  exit_status_tests.rs  features_tests.rs  integration_tests.rs  test_suite.rs  tests.rs
crates/core/tests/async_utils/: cancellation_tests.rs  mod.rs  timeout_tests.rs
crates/core/tests/config/: config_tests.rs
crates/core/tests/features/: constructor_tests.rs  env_override_tests.rs  feature_detection_tests.rs  features_tests.rs  mod.rs  query_methods_tests.rs  test_helpers.rs  trait_impl_tests.rs
crates/core/tests/file_search/: filters_tests.rs  mod.rs  search_tests.rs
crates/core/tests/menu/: command_entry_tests.rs  menu_entry_tests.rs  menu_provider_tests.rs  mod.rs
crates/orchestrator/: Cargo.toml  README.md
crates/orchestrator/src/: lib.rs
crates/orchestrator/tests/: error_tests.rs  test_suite.rs
crates/otel/: Cargo.toml  README.md
crates/otel/src/: correlation.rs  lib.rs  telemetry.rs  tracing_setup.rs
crates/otel/tests/: error_tests.rs  telemetry_tests.rs  test_suite.rs  tracing_setup_tests.rs
crates/task-worker/: Cargo.toml  README.md
crates/task-worker/src/: lib.rs
crates/ui/: Cargo.toml  README.md
crates/ui/src/: display.rs  lib.rs  palette.rs  style.rs  terminal.rs  writer.rs
crates/ui/tests/: component_tests.rs  display_tests.rs  enum_menu_tests.rs  error_tests.rs  integration_tests.rs  palette_tests.rs  terminal_tests.rs  test_suite.rs  ui_integration_tests.rs  writer_tests.rs
file-search/: Cargo.toml
file-search/src/: filters.rs  lib.rs  search.rs
file-search/tests/: filters_tests.rs
ollama/: Cargo.toml
ollama/src/: client.rs  lib.rs  models.rs
ollama/tests/: client_tests.rs  integration_tests.rs  models_tests.rs
otel/: Cargo.toml
otel/src/: lib.rs  telemetry.rs  tracing_setup.rs
otel/tests/: telemetry_tests.rs
ui/: Cargo.toml
ui/src/: display.rs  lib.rs  palette.rs  prompt.rs  style.rs  terminal.rs
ui/src/legacy/: mod.rs  palette.rs  terminal.rs
ui/src/modern/: app.rs  events.rs  mod.rs  tui.rs  widgets.rs
ui/src/ui/: mod.rs  palette.rs  prompt.rs  terminal.rs
ui/tests/: display_tests.rs  integration_tests.rs  terminal_tests.rs  ui_integration_tests.rs
(+443 files in other folders)
