[workspace]
members = [
    "crates/cli",
    "crates/core",
    "crates/ui",
    "crates/otel",
    "crates/commands",
    "crates/commands/management",
    "crates/commands/templating",
    "crates/commands/manifest",
    "crates/commands/translate",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["NetToolsKit Team"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
tokio = { version = "1.34", features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Terminal/TUI dependencies
crossterm = "0.28"
ratatui = "0.28"

# String manipulation
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"

# Color support
owo-colors = "3.5"
supports-color = "2.1"

# Interactive prompts
inquire = "0.7"

# Async utilities
futures = "0.3"
futures-util = "0.3"

# Tracing/observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.21"
opentelemetry_sdk = "0.21"

# File system
walkdir = "2.4"
ignore = "0.4"
globset = "0.4"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Template engine
handlebars = "4.5"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"

# Feature flags for incremental TUI improvements
[workspace.metadata.features]
description = """
Feature flags control opt-in TUI improvements:
- modern-tui: New Ratatui-based TUI (experimental)
- event-driven: Event loop architecture (requires modern-tui)
- frame-scheduler: Frame coalescing optimization (requires modern-tui)
- persistent-sessions: Save/load sessions (experimental)

Default: Standard UI (stable)
"""