[workspace]
members = [
    "crates/cli",
    "crates/core",
    "crates/ui",
    "crates/otel",
    "crates/orchestrator",
    "crates/commands",
    "crates/commands/templating",
    "crates/commands/manifest",
    "crates/commands/translate",
    "crates/commands/help",
    "benchmarks",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["NetToolsKit Team"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
tokio = { version = "1.34", features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Terminal dependencies
crossterm = "0.28"

# String manipulation
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
heck = "0.5"

# Color support
owo-colors = "3.5"
supports-color = "2.1"

# Interactive prompts
inquire = "0.9"

# Async utilities
futures = "0.3"
futures-util = "0.3"

# Tracing/observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.32"
opentelemetry = { version = "0.31", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.31", features = ["trace", "metrics", "grpc-tonic", "http-proto"] }

# Configuration
toml = "0.8"
dirs = "5.0"

# File system
walkdir = "2.4"
ignore = "0.4"
globset = "0.4"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Template engine
handlebars = "6.2"

# Testing
serial_test = "3.2"
insta = "1.41"
assert_cmd = "2.0"
predicates = "3.1"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10"
serde_yaml = "0.9"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# Keep pedantic/nursery/cargo as opt-in signals for local improvement work.
# CI quality gate should focus on broadly actionable `clippy::all` findings.
pedantic = "allow"
nursery = "allow"
cargo = "allow"
cargo_common_metadata = "allow"

# Feature flags for incremental TUI improvements
[workspace.metadata.features]
description = """
Feature flags control opt-in TUI improvements:
- modern-tui: New Ratatui-based TUI (experimental)
- event-driven: Event loop architecture (requires modern-tui)
- frame-scheduler: Frame coalescing optimization (requires modern-tui)
- persistent-sessions: Save/load sessions (experimental)

Default: Standard UI (stable)
"""
