[package]
name = "nettoolskit-benchmarks"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
nettoolskit-ui = { path = "../crates/ui" }
nettoolskit-core = { path = "../crates/core" }
nettoolskit-manifest = { path = "../crates/commands/manifest" }
nettoolskit-templating = { path = "../crates/commands/templating" }
criterion = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "template_rendering"
harness = false

[[bench]]
name = "manifest_parsing"
harness = false

[[bench]]
name = "ui_formatting"
harness = false

[[bench]]
name = "file_search"
harness = false
