[package]
name = "nettoolskit-commands"
version.workspace = true
edition.workspace = true

[dependencies]
# Core types
nettoolskit-core = { path = "../core" }

# UI and colors
owo-colors = { workspace = true }
nettoolskit-ui = { path = "../ui" }

# Async runtime
tokio.workspace = true

# Async utilities
nettoolskit-async-utils = { path = "../async-utils" }
futures = { workspace = true }

# CLI argument parsing
clap.workspace = true

# String utilities for enums
strum = { workspace = true }
strum_macros = { workspace = true }

# Telemetry and observability
nettoolskit-otel = { path = "../otel" }
tracing = { workspace = true }

[lib]
name = "nettoolskit_commands"
path = "src/lib.rs"