[package]
name = "nettoolskit-commands"
version.workspace = true
edition.workspace = true

[dependencies]
# Core types
nettoolskit-core = { path = "../core" }

# UI and colors
owo-colors = { workspace = true }
nettoolskit-ui = { path = "../ui" }

# Async runtime
tokio.workspace = true

# Async utilities
nettoolskit-async-utils = { path = "../async-utils" }
futures = { workspace = true }

# CLI argument parsing
clap.workspace = true

# String utilities for enums
strum = { workspace = true }
strum_macros = { workspace = true }

# Telemetry and observability
nettoolskit-otel = { path = "../otel" }
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Serialization and templating
serde = { workspace = true }
serde_yaml = "0.9"
serde_json = { workspace = true }
handlebars = { workspace = true }
once_cell = "1.19"
regex = "1.10"
walkdir = { workspace = true }

[dev-dependencies]
tempfile = "3.10"

[lib]
name = "nettoolskit_commands"
path = "src/lib.rs"
