[package]
name = "nettoolskit-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["legacy-ui"]
legacy-ui = []              # Current UI (default, stable)
modern-tui = []             # New Ratatui-based TUI (experimental)
event-driven = ["modern-tui"] # Event loop (requires modern-tui)
frame-scheduler = ["modern-tui"] # Frame coalescing (requires modern-tui)
persistent-sessions = []    # Save/load sessions
full-tui = ["modern-tui", "event-driven", "frame-scheduler"]
experimental = ["full-tui", "persistent-sessions"]

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Tracing
tracing = { workspace = true }

[lints]
workspace = true