[package]
name = "nettoolskit-file-search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
walkdir = { workspace = true }
ignore = { workspace = true }
globset = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }