[package]
name = "nettoolskit-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
modern-tui = ["nettoolskit-core/modern-tui"]
event-driven = ["nettoolskit-core/event-driven"]
frame-scheduler = ["nettoolskit-core/frame-scheduler"]
persistent-sessions = ["nettoolskit-core/persistent-sessions"]
full-tui = ["nettoolskit-core/full-tui"]
experimental = ["nettoolskit-core/experimental"]

[[bin]]
name = "ntk"
path = "src/main.rs"

[lib]
name = "nettoolskit_cli"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
nettoolskit-commands = { path = "../commands" }
nettoolskit-ui = { path = "../ui" }
nettoolskit-core = { path = "../core" }
nettoolskit-otel = { path = "../otel" }

# Async and standard dependencies
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
owo-colors = { workspace = true }
supports-color = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
handlebars = { workspace = true }

# Tracing and observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Additional dependencies
ctrlc = "3.4"

[dev-dependencies]
tokio-test = "0.4"