[package]
name = "nettoolskit-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Interactive command-line interface for .NET development workflows"
repository = "https://github.com/ThiagoGuislotti/NetToolsKit"
readme = "README.md"
keywords = ["dotnet", "cli", "templates", "automation"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = []
modern-tui = ["nettoolskit-core/modern-tui"]
event-driven = ["nettoolskit-core/event-driven"]
frame-scheduler = ["nettoolskit-core/frame-scheduler"]
persistent-sessions = ["nettoolskit-core/persistent-sessions"]
full-tui = ["nettoolskit-core/full-tui"]
experimental = ["nettoolskit-core/experimental"]

[[bin]]
name = "ntk"
path = "src/main.rs"

[lib]
name = "nettoolskit_cli"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
nettoolskit-orchestrator = { path = "../orchestrator" }
nettoolskit-ui = { path = "../ui" }
nettoolskit-core = { path = "../core" }
nettoolskit-otel = { path = "../otel" }

# Async and standard dependencies
clap = { workspace = true }
clap_complete = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crossterm = { workspace = true }
owo-colors = { workspace = true }
supports-color = { workspace = true }
rustyline = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-c-sharp = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }

# Tracing and observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }

# Additional dependencies
ctrlc = "3.5"

[dev-dependencies]
tokio-test = "0.4"
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
serial_test = { workspace = true }
reqwest = { workspace = true }

[lints]
workspace = true