[package]
name = "nettoolskit-commands"
version = "1.0.0"
edition = "2021"

[lib]
name = "nettoolskit_commands"
path = "lib.rs"

[dependencies]
# Command implementations
nettoolskit-help = { path = "help" }
nettoolskit-manifest = { path = "manifest" }
nettoolskit-translate = { path = "translate" }
thiserror = "2.0"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.8"