[package]
name = "nettoolskit-commands"
version = "1.0.0"
edition = "2021"
authors = ["NetToolsKit Team"]
license = "MIT"
description = "Command collection and dispatcher for NetToolsKit CLI"
repository = "https://github.com/ThiagoGuislotti/NetToolsKit"
readme = "README.md"
keywords = ["cli", "commands", "dotnet"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "nettoolskit_commands"
path = "lib.rs"

[dependencies]
# Command implementations
nettoolskit-help = { path = "help" }
nettoolskit-manifest = { path = "manifest" }
nettoolskit-translate = { path = "translate" }
thiserror = "2.0"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.8"
