[package]
name = "nettoolskit-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
modern-tui = []             # New Ratatui-based TUI (experimental)
event-driven = ["modern-tui"] # Event loop (requires modern-tui)
frame-scheduler = ["modern-tui"] # Frame coalescing (requires modern-tui)
persistent-sessions = []    # Save/load sessions
full-tui = ["modern-tui", "event-driven", "frame-scheduler"]
experimental = ["full-tui", "persistent-sessions"]

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Tracing
tracing = { workspace = true }

# Enum utilities
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"

# Async utilities (from async-utils)
tokio = { workspace = true }
futures = { workspace = true }

# File search utilities (from file-search)
walkdir = "2.5"
ignore = "0.4"
globset = "0.4"

[lints]
workspace = true