[package]
name = "nettoolskit-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core utilities and shared types for NetToolsKit CLI"
repository = "https://github.com/ThiagoGuislotti/NetToolsKit"
readme = "README.md"
keywords = ["cli", "utilities", "filesystem", "async"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = []
modern-tui = []             # New Ratatui-based TUI (experimental)
event-driven = ["modern-tui"] # Event loop (requires modern-tui)
frame-scheduler = ["modern-tui"] # Frame coalescing (requires modern-tui)
persistent-sessions = []    # Save/load sessions
full-tui = ["modern-tui", "event-driven", "frame-scheduler"]
experimental = ["full-tui", "persistent-sessions"]

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Tracing
tracing = { workspace = true }

# Configuration
toml = { workspace = true }
dirs = { workspace = true }

# Enum utilities
strum = { workspace = true }
strum_macros = { workspace = true }

# Async utilities (from async-utils)
tokio = { workspace = true }
futures = { workspace = true }

# File search utilities (from file-search)
walkdir = "2.5"
ignore = "0.4"
globset = "0.4"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
