[package]
name = "nettoolskit-otel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "OpenTelemetry integration for NetToolsKit CLI"
repository = "https://github.com/ThiagoGuislotti/NetToolsKit"
readme = "README.md"
keywords = ["opentelemetry", "telemetry", "tracing", "cli"]
categories = ["development-tools"]

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
nettoolskit-core = { path = "../core" }
nettoolskit-ui = { path = "../ui" }
