[package]
name = "nettoolskit-otel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Telemetry, metrics, and structured logging for NetToolsKit CLI"
repository = "https://github.com/ThiagoGuislotti/NetToolsKit"
readme = "README.md"
keywords = ["telemetry", "tracing", "metrics", "cli"]
categories = ["development-tools"]

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
nettoolskit-core = { path = "../core" }
nettoolskit-ui = { path = "../ui" }

[lints]
workspace = true
