[package]
name = "nettoolskit-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Terminal UI components for NetToolsKit CLI"
repository = "https://github.com/ThiagoGuislotti/NetToolsKit"
readme = "README.md"
keywords = ["tui", "terminal", "cli", "ui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
crossterm = { version = "0.28", features = ["event-stream"] }
inquire = "0.7"
owo-colors = "3.5"
thiserror = "1.0"
tracing = "0.1"
once_cell = "1.19"
nettoolskit-core = { path = "../core" }
strum = { version = "0.26", features = ["derive"] }

[lib]
name = "nettoolskit_ui"
path = "src/lib.rs"
