[package]
name = "nettoolskit-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Terminal UI components for NetToolsKit CLI"
repository = "https://github.com/ThiagoGuislotti/NetToolsKit"
readme = "README.md"
keywords = ["tui", "terminal", "cli", "ui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
crossterm = { version = "0.28", features = ["event-stream"] }
inquire = { workspace = true }
owo-colors = "3.5"
supports-color = { workspace = true }
tracing = "0.1"
once_cell = "1.19"
nettoolskit-core = { path = "../core" }
strum = { workspace = true }

[lib]
name = "nettoolskit_ui"
path = "src/lib.rs"

[dev-dependencies]
serial_test = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true
