[package]
name = "nettoolskit-manifest"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Manifest parsing and application for NetToolsKit CLI"
repository = "https://github.com/ThiagoGuislotti/NetToolsKit"
readme = "README.md"
keywords = ["cli", "manifest", "configuration", "dotnet"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Core types (includes ExitStatus)
nettoolskit-core = { path = "../../core" }

# Templating feature (sibling within commands/)
nettoolskit-templating = { path = "../templating" }

# UI components
nettoolskit-ui = { path = "../../ui" }
owo-colors = { workspace = true }
inquire = { workspace = true }

# Enum utilities
strum = { workspace = true }
strum_macros = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

# String utilities
regex = "1.10"
once_cell = "1.19"

# File system
walkdir = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = "1.0"

# Telemetry
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.10"

[lib]
name = "nettoolskit_manifest"
path = "src/lib.rs"
