[package]
name = "nettoolskit-templating"
version = "0.1.0"
edition = "2021"
authors = ["NetToolsKit Contributors"]
description = "Template rendering engine for NetToolsKit CLI"
license = "MIT"
repository = "https://github.com/ThiagoGuislotti/NetToolsKit"
readme = "README.md"
keywords = ["cli", "templates", "rendering", "handlebars"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "nettoolskit_templating"
path = "src/lib.rs"

[dependencies]
# Internal dependencies (Nível 1)
nettoolskit-core = { path = "../../core" }

# External dependencies
handlebars = { workspace = true }
heck = { workspace = true }
serde = "1.0"
serde_json = "1.0"
walkdir = "2.5"
thiserror = { workspace = true }
tokio = { version = "1.50", features = ["fs", "rt-multi-thread", "macros"] }
dashmap = "6.1"
async-trait = "0.1"
num_cpus = "1.16"

[dev-dependencies]
tempfile = "3.27"
serde_json = "1.0"
futures = "0.3"

[lints]
workspace = true